--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,18 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+
   <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
     {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google_analytics.html %}
     {% endif %}
   </head>
+
   <body>
-    {{ content }}
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </main>
   </body>
+
 </html>
